force-app/main/default/objects/DatasourceSchema__c/DatasourceSchema__c.object-meta.xml
<CustomObject>
    <label>DatasourceSchema</label>
    <nameField>
        <displayFormat>DSS-{00000}</displayFormat>
        <label>DatasourceSchema Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DatasourceSchemas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>