force-app/main/default/objects/DatasourceSchema__c/fields/Datasource__c.field-meta.xml
<CustomField>
    <fullName>Datasource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Datasource</label>
    <referenceTo>Datasource__c</referenceTo>
    <relationshipLabel>SchemaDatasource</relationshipLabel>
    <relationshipName>DatasourceId_del</relationshipName>
    <type>Lookup</type>
</CustomField>