force-app/main/default/objects/DatasourceSchema__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>target sobject field api name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>