force-app/main/default/objects/DatasourceSchema__c/fields/GroupBy__c.field-meta.xml
<CustomField>
    <fullName>GroupBy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GroupBy</label>
    <type>Checkbox</type>
</CustomField>