force-app/main/default/objects/DatasourceSchema__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key</label>
    <type>Checkbox</type>
</CustomField>