force-app/main/default/objects/DatasourceSchema__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Data Column Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>