force-app/main/default/objects/DatasourceSchema__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>data file column title</label>
    <length>200</length>
    <type>Text</type>
</CustomField>