force-app/main/default/objects/DatasourceSchema__c/fields/Updatable__c.field-meta.xml
<CustomField>
    <fullName>Updatable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updatable</label>
    <type>Checkbox</type>
</CustomField>